# faasrail

./: README.md
faasrail-loadgen/: Cargo.toml  README.md
faasrail-loadgen/artifacts/: azure_spec_15rps_5min.csv
faasrail-loadgen/crates/faasrail-loadgen/: Cargo.toml
faasrail-loadgen/crates/faasrail-loadgen-logger/: Cargo.toml  README.md
faasrail-loadgen/crates/faasrail-loadgen-logger/src/: main.rs  source.rs
faasrail-loadgen/crates/faasrail-loadgen/artifacts/tests/: exported_pretty_1000.json  exported_pretty_batch_1000_1696499473334.json  exported_pretty_stream_1000_1696499473334.json
faasrail-loadgen/crates/faasrail-loadgen/src/: fixer.rs  lib.rs  wreq.rs
faasrail-loadgen/crates/faasrail-loadgen/src/sink/: client.rs  mod.rs
faasrail-loadgen/crates/faasrail-loadgen/src/sink/backend/: mod.rs  noop.rs
faasrail-loadgen/crates/faasrail-loadgen/src/source/: client.rs  error.rs  iat.rs  minuterange.rs  mod.rs  worker.rs
faasrail-loadgen/crates/faasrail-loadgen/src/source/backend/: mod.rs  noop.rs
faasrail-shrinkray/: .gitignore  README.md  requirements-dev.yml  requirements-minimal.yml
faasrail-shrinkray/artifacts/: icy2-20231011-5.10.189__20231014175133.json
faasrail-shrinkray/shrinkray/: benchmarks.py  distribution.py  generator.py  main.py  mapping.py  preprocess.py  specification.py  utils.py  workload.py
