[workspace]
members = [
    "crates/faasrail-loadgen",
    "crates/faasrail-loadgen-logger",
]
resolver = "2"


[workspace.package]
version = "0.0.1"  # remember to update html_root_url
edition = "2021"
license = "Apache-2.0"
authors = ["Christos Katsakioris <ckatsak@gmail.com>"]


[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1.1"
thiserror = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"


[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
