[package]
name = "faasrail-loadgen-logger"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "FaaSRail's load generator - Logger"
repository = "https://github.com/ckatsak/faasrail-loadgen"
readme = "README.md"

[dependencies]
anyhow = "1"
argh = "0.1.12"
futures = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["signal"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

faasrail-loadgen = { path = "../faasrail-loadgen" }
